--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://matvei212.github.io/goit-js-hw-09/",
+  "homepage": "https://https://github.com/Matvei212/goit-js-hw-09/blob/main/src/index.html",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-09/"
